--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
@@ -8,15 +8,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
-    <!-- gLightbox gallery-->
-    <link rel="stylesheet" href="vendor/glightbox/css/glightbox.min.css">
-    <!-- Range slider-->
-    <link rel="stylesheet" href="vendor/nouislider/nouislider.min.css">
-    <!-- Choices CSS-->
-    <link rel="stylesheet" href="vendor/choices.js/public/assets/styles/choices.min.css">
-    <!-- Swiper slider-->
-    <link rel="stylesheet" href="vendor/swiper/swiper-bundle.min.css">
-    <!-- Google fonts-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;400;700&amp;display=swap">
@@ -29,28 +22,35 @@
     <link rel="stylesheet" href="css/custom.css">
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/logopng.ico">
+    <link rel="shortcut icon" href="img/logopng.png">
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <script src="https://cdn.socket.io/4.2.0/socket.io.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+
+    <script src="./db/firebase.js"></script>
+
 
 
 </head>
 
 <body>
+    <div id="preloader">
+        <img src="./img/logopng.png" class="img-loading" alt="">
+    </div>
     <div class="page-holder">
         <!-- navbar-->
         <header class="header bg-white">
             <div class="container px-lg-3">
-                <nav class="navbar navbar-expand-lg navbar-light py-3 px-lg-0"><a class="navbar-brand" href="/"><span class="fw-bold text-uppercase text-dark">Marlos Cardoso</span></a>
+                <nav class="navbar navbar-expand-lg navbar-light py-3 px-lg-0">
                     <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto">
+
                             <li class="nav-item">
-                                <!-- Link--><a class="nav-link active" href="/">Home</a>
+                                <span class="fw-bold text-uppercase text-dark" style="font-size: 16pt;">Marlos Cardoso</span>
                             </li>
-                            <li class="nav-item">
-                                <!-- Link--><a class="nav-link" href="shop">Catálogo</a>
-                            </li>
+
                             <li class="nav-item">
                                 <a href="https://www.instagram.com/marloscard/" target="_blank" class="nav-link"><i class="lni lni-instagram"></i>@marloscard</a>
                             </li>
@@ -59,14 +59,27 @@
                             </li>
 
 
+
                         </ul>
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="cart"> <i class="fas fa-dolly-flatbed me-1 text-gray"></i>Carrinho</a>
+                                <!-- Link--><a class="nav-link active" href="./index.html"><i class="fas fa-home me-1 text-gray"></i>Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <!-- Link--><a class="nav-link" href="shop.html"><i class="fas fa-store me-1 text-gray"></i>Catálogo</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="pedidos.html"> <i class="fas fa-list me-1 text-gray"></i>Pedidos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="cart.html"> <i class="fas fa-dolly-flatbed me-1 text-gray"></i>Carrinho</a>
                             </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="./login"> <i class="fas fa-user me-1 text-gray fw-normal"></i>Entrar</a>
+                            <li class="nav-item" id="btnlogin">
+                                <a class="nav-link" href="./login.html"> <i class="fas fa-user me-1 text-gray fw-normal"></i>Entrar</a>
+                            </li>
+                            <li class="nav-item" id="btnsair" onclick="deslogar()">
+                                <a class="nav-link" href="#deslogando"> <i class="fas fa-power-off text-gray"></i>Deslogar</a>
                             </li>
                         </ul>
                     </div>
@@ -98,7 +111,7 @@
                                     <p class="text-sm mb-4" id="product-description"> </p>
                                     <div class="row align-items-stretch mb-4 gx-0">
 
-                                        <div class="col-sm-5" id="btn-addcart" style="width: 100%;"><button style="width: 100%;" class="btn btn-dark btn-sm w-100 h-100 d-flex align-items-center justify-content-center px-0" href="cart">Adicionar no carrinho</button></div>
+                                        <div class="col-sm-5" id="btn-addcart" style="width: 100%;"><button style="width: 100%;" class="btn btn-dark btn-sm w-100 h-100 d-flex align-items-center justify-content-center px-0" href="cart.html">Adicionar no carrinho</button></div>
                                     </div>
                                 </div>
                             </div>
@@ -109,33 +122,50 @@
         </div>
         <!-- HERO SECTION-->
         <div class="container">
-            <section class="hero pb-3 bg-cover bg-center d-flex align-items-center" style="background: url(img/hero-banner-alt.png)">
+            <section data-aos="fade-down" class="hero pb-3 bg-cover bg-center d-flex align-items-center" id="banner" style="flex-wrap: wrap;border-radius: 30px;background: url(img/hero-banner-alt.png)">
+                <script>
+                    const backgroundImages = [
+                        '../img/hero-banner-alt.png',
+                        '../img/hero-banner-alt2.png'
+                    ];
+
+                    // Variável para rastrear o índice atual da imagem de fundo
+                    let currentImageIndex = 0;
+
+                    // Função para alternar a imagem de fundo
+                    function changeBackgroundImage() {
+                        const bannerElement = document.getElementById('banner');
+                        bannerElement.style.backgroundImage = `url('${backgroundImages[currentImageIndex]}')`;
+
+                        // Atualiza o índice para a próxima imagem de fundo
+                        currentImageIndex = (currentImageIndex + 1) % backgroundImages.length;
+                    }
+
+                    // Define o intervalo para trocar a imagem de fundo a cada 2 segundos
+                    setInterval(changeBackgroundImage, 8000);
+                </script>
+                <img src="./img/logopng.png" width="100px" id="logoempresa" alt="" srcset="">
                 <div class="container py-5">
+
                     <div class="row px-4 px-lg-5">
+
                         <div class="col-lg-6">
                             <p class="text-muted small text-uppercase mb-2">"Estilo masculino elevado à máxima elegância."</p>
-                            <h1 class="h2 text-uppercase mb-3">Marlos Cardoso</h1><a class="btn btn-dark" href="shop">Ternos</a><a class="btn btn-dark" href="shop">Gravatas</a><a class="btn btn-dark" href="shop">Sapatos</a>
+                            <h1 class="h2 text-uppercase mb-3"><img src="./img/logopng.png" width="30px" style="margin-top: -10px;" alt=""> Marlos Cardoso</h1><a class="btn btn-dark" href="shop.html">Ver Produtos</a>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- CATEGORIES SECTION-->
-            <section class="pt-5">
+            <section class="pt-5 " data-aos="zoom-in-down">
                 <header class="text-center">
                     <p class="small text-muted small text-uppercase mb-1">Refine seu visual com nossos ternos exclusivos.</p>
                     <h2 class="h5 text-uppercase mb-4">Categorias</h2>
                 </header>
-                <div class="row">
-                    <div class="col-md-4">
-                        <a class="category-item" href="shop#TERNOS"><img class="img-fluid" src="img/cat-img-1.jpg" alt="" /><strong class="category-item-title">Ternos</strong></a>
-                    </div>
-                    <div class="col-md-4">
-                        <a class="category-item mb-4" href="shop#GRAVATAS"><img class="img-fluid" src="img/cat-img-2.jpg" alt="" /><strong class="category-item-title">Gravatas</strong></a>
-                        <a class="category-item" href="shop#SAPATOS"><img class="img-fluid" src="img/cat-img-3.jpg" alt="" /><strong class="category-item-title">Sapatos</strong></a>
-                    </div>
-                    <div class="col-md-4">
-                        <a class="category-item" href="shop#OUTROS"><img class="img-fluid" src="img/cat-img-4.jpg" alt="" /><strong class="category-item-title">Outros</strong></a>
-                    </div>
+                <div class="row" id="lista-categ">
+
+
+
                 </div>
             </section>
             <!-- TRENDING PRODUCTS-->
@@ -144,7 +174,7 @@
                     <p class="small text-muted small text-uppercase mb-1">Nossos Produtos</p>
                     <h2 class="h5 text-uppercase mb-4">Produtos em alta</h2>
                 </header>
-                <div class="row" id="list-products">
+                <div class="row" data-aos="zoom-in-down" id="list-products">
 
 
 
@@ -161,17 +191,10 @@
                             <li><a class="footer-link" target="_blank" href="https://wa.me/5574988274544?text=Preciso de sua ajuda, Marlos Cardoso">Ajuda</a></li>
 
 
-                            <li><a class="footer-link" href="terms">Termos &amp; Condições</a></li>
+                            <li><a class="footer-link" href="terms.html">Termos &amp; Condições</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <h6 class="text-uppercase mb-3">Empresa</h6>
-                        <ul class="list-unstyled mb-0">
 
-                            <li><a class="footer-link" href="#!">Avaliações</a></li>
-                            <li><a class="footer-link" href="#!">FAQs</a></li>
-                        </ul>
-                    </div>
                     <div class="col-md-4">
                         <h6 class="text-uppercase mb-3">Redes Sociais</h6>
                         <ul class="list-unstyled mb-0">
@@ -196,16 +219,27 @@
         </footer>
         <!-- JavaScript files-->
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="vendor/glightbox/js/glightbox.min.js"></script>
-        <script src="vendor/nouislider/nouislider.min.js"></script>
-        <script src="vendor/swiper/swiper-bundle.min.js"></script>
-        <script src="vendor/choices.js/public/assets/scripts/choices.min.js"></script>
+
 
 
         <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     </div>
     <script src="./app.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <script>
+        AOS.init();
+    </script>
+    <script>
+        $("#preloader").animate({
+            'opacity': '0'
+        }, 1000, function() {
+            setTimeout(function() {
+                $("#preloader").css("visibility", "hidden").fadeOut();
+            }, 500);
+        });
+    </script>
 </body>
 
 </html>
