--- a/public/cart.html
+++ b/public/cart.html
@@ -11,15 +11,10 @@
     <!-- gLightbox gallery-->
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="vendor/glightbox/css/glightbox.min.css">
+
     <script src="https://cdn.socket.io/4.2.0/socket.io.min.js"></script>
     <!-- Range slider-->
-    <link rel="stylesheet" href="vendor/nouislider/nouislider.min.css">
-    <!-- Choices CSS-->
-    <link rel="stylesheet" href="vendor/choices.js/public/assets/styles/choices.min.css">
 
-    <!-- Swiper slider-->
-    <link rel="stylesheet" href="vendor/swiper/swiper-bundle.min.css">
     <!-- Google fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;400;700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300;400;800&amp;display=swap">
@@ -41,18 +36,39 @@
         <!-- navbar-->
         <header class="header bg-white">
             <div class="container px-lg-3">
-                <nav class="navbar navbar-expand-lg navbar-light py-3 px-lg-0"><a class="navbar-brand" href="/"><span class="fw-bold text-uppercase text-dark">Marlos Cardoso</span></a>
+                <nav class="navbar navbar-expand-lg navbar-light py-3 px-lg-0">
                     <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto">
-                            <li class="nav-item">
-                                <!-- Link--><a class="nav-link" href="/">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <!-- Link--><a class="nav-link" href="shop">Loja</a>
-                            </li>
-                        </ul>
 
+                            <li class="nav-item">
+                                <span class="fw-bold text-uppercase text-dark" style="font-size: 16pt;">Marlos Cardoso</span>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="https://www.instagram.com/marloscard/" target="_blank" class="nav-link"><i class="lni lni-instagram"></i>@marloscard</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="https://wa.me/5574988274544" target="_blank" class="nav-link"><i class="lni lni-whatsapp"></i>(74) 98827-4544</a>
+                            </li>
+
+
+
+                        </ul>
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <!-- Link--><a class="nav-link " href="./index.html"><i class="fas fa-home me-1 text-gray"></i>Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <!-- Link--><a class="nav-link " href="shop.html"><i class="fas fa-store me-1 text-gray"></i>Catálogo</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link active" href="cart.html"> <i class="fas fa-dolly-flatbed me-1 text-gray"></i>Carrinho</a>
+                            </li>
+
+
+                        </ul>
                     </div>
                 </nav>
             </div>
@@ -70,7 +86,7 @@
                         <div class="col-lg-6 text-lg-end">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb justify-content-lg-end mb-0 px-0 bg-light">
-                                    <li class="breadcrumb-item"><a class="text-dark" href="/">Home</a></li>
+                                    <li class="breadcrumb-item"><a class="text-dark" href="./index.html">Home</a></li>
                                     <li class="breadcrumb-item active" aria-current="page">Carrinho</li>
                                 </ol>
                             </nav>
@@ -102,7 +118,7 @@
                         <!-- CART NAV-->
                         <div class="bg-light px-4 py-3">
                             <div class="row align-items-center text-center">
-                                <div class="col-md-6 mb-3 mb-md-0 text-md-start"><a class="btn btn-link p-0 text-dark btn-sm" href="shop"><i class="fas fa-long-arrow-alt-left me-2"> </i>Continue Comprando</a></div>
+                                <div class="col-md-6 mb-3 mb-md-0 text-md-start"><a class="btn btn-link p-0 text-dark btn-sm" href="./shop.html"><i class="fas fa-long-arrow-alt-left me-2"> </i>Continue Comprando</a></div>
                             </div>
                         </div>
                     </div>
@@ -114,7 +130,7 @@
                                 <ul class="list-unstyled mb-0">
                                     <li class="border-bottom my-2"></li>
                                     <li class="d-flex align-items-center justify-content-between mb-4"><strong class="text-uppercase small font-weight-bold">Total</strong><span id="total-price"></span></li>
-                                    <button onclick="finalizar()" class="btn btn-outline-dark btn-sm" style="width: 100%;height: 50px;">Finalizar Compra<i class="fas fa-long-arrow-alt-right ms-2"></i></button>
+                                    <button onclick="checkout()" class="btn btn-outline-dark btn-sm" style="width: 100%;height: 50px;">Prosseguir<i class="fas fa-long-arrow-alt-right ms-2"></i></button>
 
 
 
@@ -135,17 +151,10 @@
                             <li><a class="footer-link" target="_blank" href="https://wa.me/5574988274544?text=Preciso de sua ajuda, Marlos Cardoso">Ajuda</a></li>
 
 
-                            <li><a class="footer-link" href="terms">Termos &amp; Condições</a></li>
+                            <li><a class="footer-link" href="./terms.html">Termos &amp; Condições</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <h6 class="text-uppercase mb-3">Empresa</h6>
-                        <ul class="list-unstyled mb-0">
 
-                            <li><a class="footer-link" href="#!">Avaliações</a></li>
-                            <li><a class="footer-link" href="#!">FAQs</a></li>
-                        </ul>
-                    </div>
                     <div class="col-md-4">
                         <h6 class="text-uppercase mb-3">Redes Sociais</h6>
                         <ul class="list-unstyled mb-0">
@@ -170,10 +179,7 @@
         </footer>
         <!-- JavaScript files-->
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="vendor/glightbox/js/glightbox.min.js"></script>
-        <script src="vendor/nouislider/nouislider.min.js"></script>
-        <script src="vendor/swiper/swiper-bundle.min.js"></script>
-        <script src="vendor/choices.js/public/assets/scripts/choices.min.js"></script>
+
 
 
         <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
