--- a/public/checkout.html
+++ b/public/checkout.html
@@ -8,23 +8,22 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
-    <!-- gLightbox gallery-->
-    <link rel="stylesheet" href="vendor/glightbox/css/glightbox.min.css">
-    <!-- Range slider-->
-    <link rel="stylesheet" href="vendor/nouislider/nouislider.min.css">
-    <!-- Choices CSS-->
-    <link rel="stylesheet" href="vendor/choices.js/public/assets/styles/choices.min.css">
-    <!-- Swiper slider-->
-    <link rel="stylesheet" href="vendor/swiper/swiper-bundle.min.css">
+
     <!-- Google fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;400;700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300;400;800&amp;display=swap">
     <!-- theme stylesheet-->
     <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="css/custom.css">
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/favicon.png">
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="./db/firebase.js"></script>
+    <link rel="shortcut icon" href="img/logopng.png">
+
 </head>
 
 <body>
@@ -38,49 +37,7 @@
                 </nav>
             </div>
         </header>
-        <!--  Modal -->
-        <div class="modal fade" id="productView" tabindex="-1">
-            <div class="modal-dialog modal-lg modal-dialog-centered">
-                <div class="modal-content overflow-hidden border-0">
-                    <button class="btn-close p-4 position-absolute top-0 end-0 z-index-20 shadow-0" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-                    <div class="modal-body p-0">
-                        <div class="row align-items-stretch">
-                            <div class="col-lg-6 p-lg-0">
-                                <a class="glightbox product-view d-block h-100 bg-cover bg-center" style="background: url(img/product-5.jpg)" href="img/product-5.jpg" data-gallery="gallery1" data-glightbox="Red digital smartwatch"></a>
-                                <a class="glightbox d-none" href="img/product-5-alt-1.jpg" data-gallery="gallery1" data-glightbox="Red digital smartwatch"></a>
-                                <a class="glightbox d-none" href="img/product-5-alt-2.jpg" data-gallery="gallery1" data-glightbox="Red digital smartwatch"></a>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="p-4 my-md-4">
-                                    <ul class="list-inline mb-2">
-                                        <li class="list-inline-item m-0"><i class="fas fa-star small text-warning"></i></li>
-                                        <li class="list-inline-item m-0 1"><i class="fas fa-star small text-warning"></i></li>
-                                        <li class="list-inline-item m-0 2"><i class="fas fa-star small text-warning"></i></li>
-                                        <li class="list-inline-item m-0 3"><i class="fas fa-star small text-warning"></i></li>
-                                        <li class="list-inline-item m-0 4"><i class="fas fa-star small text-warning"></i></li>
-                                    </ul>
-                                    <h2 class="h4">Red digital smartwatch</h2>
-                                    <p class="text-muted">$250</p>
-                                    <p class="text-sm mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut ullamcorper leo, eget euismod orci. Cum sociis natoque penatibus et magnis dis parturient montes nascetur ridiculus mus. Vestibulum ultricies aliquam convallis.</p>
-                                    <div class="row align-items-stretch mb-4 gx-0">
-                                        <div class="col-sm-7">
-                                            <div class="border d-flex align-items-center justify-content-between py-1 px-3"><span class="small text-uppercase text-gray mr-4 no-select">Quantity</span>
-                                                <div class="quantity">
-                                                    <button class="dec-btn p-0"><i class="fas fa-caret-left"></i></button>
-                                                    <input class="form-control border-0 shadow-0 p-0" type="text" value="1">
-                                                    <button class="inc-btn p-0"><i class="fas fa-caret-right"></i></button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-5"><a class="btn btn-dark btn-sm w-100 h-100 d-flex align-items-center justify-content-center px-0" href="cart.html">Add to cart</a></div>
-                                    </div><a class="btn btn-link text-dark text-decoration-none p-0" href="#!"><i class="far fa-heart me-2"></i>Add to wish list</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
         <div class="container">
             <!-- HERO SECTION-->
             <section class="py-5 bg-light">
@@ -103,49 +60,49 @@
             </section>
             <section class="py-5">
                 <!-- BILLING ADDRESS-->
-                <h2 class="h5 text-uppercase mb-4">DETALHES DE FATURAMENTO</h2>
+                <h2 class="h5 text-uppercase mb-4">PREENCHA OS DADOS ABAIXO:</h2>
                 <div class="row">
                     <div class="col-lg-8">
-                        <form action="#">
+                        <form action="#" id="form">
                             <div class="row gy-3">
                                 <div class="col-lg-6">
                                     <label class="form-label text-sm text-uppercase" for="firstName">Primeiro Nome </label>
-                                    <input class="form-control form-control-lg" type="text" id="firstName" placeholder="Digite seu primeiro nome">
+                                    <input required class="form-control form-control-lg" type="text" id="firstName" placeholder="Digite seu primeiro nome">
                                 </div>
                                 <div class="col-lg-6">
                                     <label class="form-label text-sm text-uppercase" for="lastName">Ultimo Nome </label>
-                                    <input class="form-control form-control-lg" type="text" id="lastName" placeholder="Digite seu ultimo nome">
+                                    <input required class="form-control form-control-lg" type="text" id="lastName" placeholder="Digite seu ultimo nome">
+                                </div>
+                                <div class="col-lg-6">
+                                    <label class="form-label text-sm text-uppercase" for="lastName">CPF</label>
+                                    <input required class="form-control form-control-lg" type="text" id="cpf" placeholder="123.456.789-10">
+                                    <p>Não se preucupe, todos os dados são criptografados.</p>
                                 </div>
                                 <div class="col-lg-6">
                                     <label class="form-label text-sm text-uppercase" for="email">Email </label>
-                                    <input class="form-control form-control-lg" type="email" id="email" placeholder="Ex. loja@marloscardoso.com">
+                                    <input required class="form-control form-control-lg" type="email" id="email" placeholder="Ex. loja@marloscardoso.com">
                                 </div>
                                 <div class="col-lg-6">
                                     <label class="form-label text-sm text-uppercase" for="phone">Telefone</label>
-                                    <input class="form-control form-control-lg" type="tel" id="phone" placeholder="Ex. 7499137-9747">
+                                    <input required class="form-control form-control-lg" type="tel" id="phone" placeholder="Ex. 7499137-9747">
                                 </div>
 
-                                <div class="col-lg-6 form-group">
-                                    <label class="form-label text-sm text-uppercase" for="country">Pais</label>
-                                    <select class="country" id="country" data-customclass="form-control form-control-lg rounded-0">
-                      <option value>Selecione seu pais</option>
-                    </select>
-                                </div>
+
                                 <div class="col-lg-12">
                                     <label class="form-label text-sm text-uppercase" for="address">Endereço </label>
-                                    <input class="form-control form-control-lg" type="text" id="address" placeholder="Digite o nome de sua rua e número da casa.">
+                                    <input required class="form-control form-control-lg" type="text" id="address" placeholder="Digite o nome de sua rua e número da casa.">
                                 </div>
                                 <div class="col-lg-12">
                                     <label class="form-label text-sm text-uppercase" for="addressalt">Bairro </label>
-                                    <input class="form-control form-control-lg" type="text" id="addressalt" placeholder="Digite o nome do bairro">
+                                    <input required class="form-control form-control-lg" type="text" id="addressalt" placeholder="Digite o nome do bairro">
                                 </div>
                                 <div class="col-lg-6">
                                     <label class="form-label text-sm text-uppercase" for="city">Cidade </label>
-                                    <input class="form-control form-control-lg" type="text" id="city">
+                                    <input required class="form-control form-control-lg" type="text" id="city">
                                 </div>
                                 <div class="col-lg-6">
                                     <label class="form-label text-sm text-uppercase" for="state">Estado</label>
-                                    <input class="form-control form-control-lg" type="text" id="state">
+                                    <input required class="form-control form-control-lg" type="text" id="state">
                                 </div>
                                 <div class="col-lg-6">
                                     <button class="btn btn-link text-dark p-0 shadow-0" type="button" data-bs-toggle="collapse" data-bs-target="#alternateAddress">
@@ -155,6 +112,7 @@
 
                                 <div class="col-lg-12 form-group">
                                     <button class="btn btn-dark" type="submit">Fazer Compra</button>
+                                    <button class="btn btn-dark" type="button" onclick="history.back()">Voltar</button>
                                 </div>
                             </div>
                         </form>
@@ -164,12 +122,9 @@
                         <div class="card border-0 rounded-0 p-lg-4 bg-light">
                             <div class="card-body">
                                 <h5 class="text-uppercase mb-4">Sua Compra</h5>
-                                <ul class="list-unstyled mb-0">
-                                    <li class="d-flex align-items-center justify-content-between"><strong class="small fw-bold">Terno Slim</strong><span class="text-muted small">R$760</span></li>
-                                    <li class="border-bottom my-2"></li>
-                                    <li class="d-flex align-items-center justify-content-between"><strong class="small fw-bold">Gravata +2000 fios</strong><span class="text-muted small">R$75</span></li>
-                                    <li class="border-bottom my-2"></li>
-                                    <li class="d-flex align-items-center justify-content-between"><strong class="text-uppercase small fw-bold">Total</strong><span>R$835</span></li>
+                                <ul class="list-unstyled mb-0" id="order">
+
+
                                 </ul>
                             </div>
                         </div>
@@ -183,26 +138,19 @@
                     <div class="col-md-4 mb-3 mb-md-0">
                         <h6 class="text-uppercase mb-3">Atendimento ao cliente</h6>
                         <ul class="list-unstyled mb-0">
-                            <li><a class="footer-link" href="#!">Ajuda</a></li>
-                            <li><a class="footer-link" href="#!">Devoluções &amp; Reembolsos</a></li>
-                            <li><a class="footer-link" href="#!">Comprar online</a></li>
-                            <li><a class="footer-link" href="#!">Termos &amp; Condições</a></li>
+                            <li><a class="footer-link" target="_blank" href="https://wa.me/5574988274544?text=Preciso de sua ajuda, Marlos Cardoso">Ajuda</a></li>
+
+
+                            <li><a class="footer-link" href="./terms.html">Termos &amp; Condições</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <h6 class="text-uppercase mb-3">Empresa</h6>
-                        <ul class="list-unstyled mb-0">
-                            <li><a class="footer-link" href="#!">O que fazemos</a></li>
-                            <li><a class="footer-link" href="#!">Avaliações</a></li>
-                            <li><a class="footer-link" href="#!">FAQs</a></li>
-                        </ul>
-                    </div>
+
                     <div class="col-md-4">
                         <h6 class="text-uppercase mb-3">Redes Sociais</h6>
                         <ul class="list-unstyled mb-0">
-                            <li><a class="footer-link" href="#!">Instagram</a></li>
-                            <li><a class="footer-link" href="#!">Threads</a></li>
-                            <li><a class="footer-link" href="#!">Whatsapp</a></li>
+                            <li><a class="footer-link" target="_blank" href="https://www.instagram.com/marloscard/">Instagram</a></li>
+
+                            <li><a class="footer-link" target="_blank" href="https://wa.me/5574988274544">Whatsapp</a></li>
                         </ul>
                     </div>
                 </div>
@@ -212,7 +160,7 @@
                             <p class="small text-muted mb-0">&copy; 2023 Todos os direitos reservados.</p>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
-                            <p class="small text-muted mb-0">Sistema Completo Criador por <a class="text-white reset-anchor" href="http://geniusleap.tech">Genius Leap</a></p>
+                            <p class="small text-muted mb-0">Sistema Completo Criador por <a class="text-white reset-anchor" target="_blank" href="http://geniusleap.tech">Genius Leap</a></p>
                             <!-- If you want to remove the backlink, please purchase the Attribution-Free License. See details in readme.txt or license.txt. Thanks!-->
                         </div>
                     </div>
@@ -221,38 +169,14 @@
         </footer>
         <!-- JavaScript files-->
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="vendor/glightbox/js/glightbox.min.js"></script>
-        <script src="vendor/nouislider/nouislider.min.js"></script>
-        <script src="vendor/swiper/swiper-bundle.min.js"></script>
-        <script src="vendor/choices.js/public/assets/scripts/choices.min.js"></script>
-        <script src="js/front.js"></script>
-        <script>
-            // ------------------------------------------------------- //
-            //   Inject SVG Sprite - 
-            //   see more here 
-            //   https://css-tricks.com/ajaxing-svg-sprite/
-            // ------------------------------------------------------ //
-            function injectSvgSprite(path) {
 
-                var ajax = new XMLHttpRequest();
-                ajax.open("GET", path, true);
-                ajax.send();
-                ajax.onload = function(e) {
-                    var div = document.createElement("div");
-                    div.className = 'd-none';
-                    div.innerHTML = ajax.responseText;
-                    document.body.insertBefore(div, document.body.childNodes[0]);
-                }
-            }
-            // this is set to BootstrapTemple website as you cannot 
-            // inject local SVG sprite (using only 'icons/orion-svg-sprite.svg' path)
-            // while using file:// protocol
-            // pls don't forget to change to your domain :)
-            injectSvgSprite('https://bootstraptemple.com/files/icons/orion-svg-sprite.svg');
-        </script>
+
         <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     </div>
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.4.0/moment.min.js"></script>
+    <script src="./js/checkout.js"></script>
 </body>
 
 </html>
