--- a/public/detail.html
+++ b/public/detail.html
@@ -8,14 +8,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
-    <!-- gLightbox gallery-->
-    <link rel="stylesheet" href="vendor/glightbox/css/glightbox.min.css">
-    <!-- Range slider-->
-    <link rel="stylesheet" href="vendor/nouislider/nouislider.min.css">
-    <!-- Choices CSS-->
-    <link rel="stylesheet" href="vendor/choices.js/public/assets/styles/choices.min.css">
-    <!-- Swiper slider-->
-    <link rel="stylesheet" href="vendor/swiper/swiper-bundle.min.css">
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <!-- Google fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;400;700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300;400;800&amp;display=swap">
@@ -23,12 +17,15 @@
     <script src="https://cdn.jsdelivr.net/momentjs/2.29.1/moment.min.js"></script>
 
     <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
+
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/logopng.png">
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./db/firebase.js"></script>
     <script src="./js/detail.js"></script>
 
 
@@ -96,14 +93,8 @@
                         <div class="row m-sm-0">
 
                             <div class="col-sm-10 order-1 order-sm-2">
-                                <div class="swiper product-slider">
-                                    <div class="swiper-wrapper">
-                                        <div class="swiper-slide h-auto">
-                                            <img class="img-fluid" id="product-img2" src="" alt="...">
-                                        </div>
 
-                                    </div>
-                                </div>
+                                <img class="img-fluid" id="product-img2" src="" alt="...">
                             </div>
                         </div>
                     </div>
@@ -141,10 +132,7 @@
             </div>
     </div>
     </section>
-    <h1 style="padding-left: 30px;font-size: 15pt;">Produtos Semelhantes</h1>
-    <section class="sectionprodutos" id="list-products">
 
-    </section>
     <footer class="bg-dark text-white">
         <div class="container py-4">
             <div class="row py-5">
@@ -157,14 +145,7 @@
                         <li><a class="footer-link" href="#!">Termos &amp; Condições</a></li>
                     </ul>
                 </div>
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <h6 class="text-uppercase mb-3">Empresa</h6>
-                    <ul class="list-unstyled mb-0">
-                        <li><a class="footer-link" href="#!">O que fazemos</a></li>
-                        <li><a class="footer-link" href="#!">Avaliações</a></li>
-                        <li><a class="footer-link" href="#!">FAQs</a></li>
-                    </ul>
-                </div>
+
                 <div class="col-md-4">
                     <h6 class="text-uppercase mb-3">Redes Sociais</h6>
                     <ul class="list-unstyled mb-0">
@@ -188,36 +169,11 @@
         </div>
     </footer>
     <!-- JavaScript files-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="vendor/nouislider/nouislider.min.js"></script>
-    <script src="vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="vendor/choices.js/public/assets/scripts/choices.min.js"></script>
 
-    <script>
-        // ------------------------------------------------------- //
-        //   Inject SVG Sprite - 
-        //   see more here 
-        //   https://css-tricks.com/ajaxing-svg-sprite/
-        // ------------------------------------------------------ //
-        function injectSvgSprite(path) {
 
-            var ajax = new XMLHttpRequest();
-            ajax.open("GET", path, true);
-            ajax.send();
-            ajax.onload = function(e) {
-                var div = document.createElement("div");
-                div.className = 'd-none';
-                div.innerHTML = ajax.responseText;
-                document.body.insertBefore(div, document.body.childNodes[0]);
-            }
-        }
-        // this is set to BootstrapTemple website as you cannot 
-        // inject local SVG sprite (using only 'icons/orion-svg-sprite.svg' path)
-        // while using file:// protocol
-        // pls don't forget to change to your domain :)
-        injectSvgSprite('https://bootstraptemple.com/files/icons/orion-svg-sprite.svg');
-    </script>
     <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     </div>
