--- a/public/shop.html
+++ b/public/shop.html
@@ -8,14 +8,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
-    <!-- gLightbox gallery-->
-    <link rel="stylesheet" href="vendor/glightbox/css/glightbox.min.css">
-    <!-- Range slider-->
-    <link rel="stylesheet" href="vendor/nouislider/nouislider.min.css">
-    <!-- Choices CSS-->
-    <link rel="stylesheet" href="vendor/choices.js/public/assets/styles/choices.min.css">
-    <!-- Swiper slider-->
-    <link rel="stylesheet" href="vendor/swiper/swiper-bundle.min.css">
+
+
     <!-- Google fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;400;700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300;400;800&amp;display=swap">
@@ -26,6 +20,10 @@
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/logopng.png">
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="./db/firebase.js"></script>
+
     <script src="./js/shop.js"></script>
 </head>
 
@@ -34,20 +32,39 @@
         <!-- navbar-->
         <header class="header bg-white">
             <div class="container px-lg-3">
-                <nav class="navbar navbar-expand-lg navbar-light py-3 px-lg-0"><a class="navbar-brand" href="/"><span class="fw-bold text-uppercase text-dark">Marlos Cardoso</span></a>
+                <nav class="navbar navbar-expand-lg navbar-light py-3 px-lg-0">
                     <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto">
+
                             <li class="nav-item">
-                                <!-- Link--><a class="nav-link" href="/">Home</a>
+                                <span class="fw-bold text-uppercase text-dark" style="font-size: 16pt;">Marlos Cardoso</span>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="https://www.instagram.com/marloscard/" target="_blank" class="nav-link"><i class="lni lni-instagram"></i>@marloscard</a>
                             </li>
                             <li class="nav-item">
-                                <!-- Link--><a class="nav-link active" href="shop">Catálogo</a>
+                                <a href="https://wa.me/5574988274544" target="_blank" class="nav-link"><i class="lni lni-whatsapp"></i>(74) 98827-4544</a>
+                            </li>
+
+
+
+                        </ul>
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <!-- Link--><a class="nav-link " href="./index.html"><i class="fas fa-home me-1 text-gray"></i>Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <!-- Link--><a class="nav-link active" href="shop.html"><i class="fas fa-store me-1 text-gray"></i>Catálogo</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="cart.html"> <i class="fas fa-dolly-flatbed me-1 text-gray"></i>Carrinho</a>
                             </li>
 
 
                         </ul>
-
                     </div>
                 </nav>
             </div>
@@ -107,13 +124,7 @@
             <section class="py-5">
                 <div class="container p-0">
                     <div class="row">
-                        <!-- SHOP SIDEBAR-->
-                        <div class="col-lg-3 order-2 order-lg-1" id="product-categorias">
-                            <h5 class="text-uppercase mb-4">Categorias</h5>
-                            <div onclick="products()" class="py-2 px-4  categoria  mb-3"><strong class="small text-uppercase fw-bold">Todos</strong></div>
 
-
-                        </div>
 
                         <!-- SHOP LISTING-->
                         <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
@@ -140,14 +151,7 @@
                                 <li><a class="footer-link" href="terms">Termos &amp; Condições</a></li>
                             </ul>
                         </div>
-                        <div class="col-md-4 mb-3 mb-md-0">
-                            <h6 class="text-uppercase mb-3">Empresa</h6>
-                            <ul class="list-unstyled mb-0">
 
-                                <li><a class="footer-link" href="#!">Avaliações</a></li>
-                                <li><a class="footer-link" href="#!">FAQs</a></li>
-                            </ul>
-                        </div>
                         <div class="col-md-4">
                             <h6 class="text-uppercase mb-3">Redes Sociais</h6>
                             <ul class="list-unstyled mb-0">
@@ -172,9 +176,7 @@
             </footer>
             <!-- JavaScript files-->
             <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-            <script src="vendor/glightbox/js/glightbox.min.js"></script>
 
-            <script src="vendor/choices.js/public/assets/scripts/choices.min.js"></script>
 
 
 
